Fix dark mode & bring back some missing styles

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,3 +1,10 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+body {
+  @apply overflow-x-hidden bg-white text-neutral-900 scrollbar-thin
+scrollbar-thumb-neutral-500/30 selection:bg-primary-500/30
+selection:text-primary-950 dark:bg-neutral-950 dark:text-neutral-100
+dark:selection:text-primary-50 print:text-neutral-900;
+}
